<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/menu_salas"
        android:icon="@android:drawable/ic_menu_myplaces" />
    <item
        android:id="@+id/nav_reservations"
        android:title="@string/menu_reservations"
        android:icon="@android:drawable/ic_menu_my_calendar" />
    <item
        android:id="@+id/nav_devices"
        android:title="@string/menu_devices"
        android:icon="@android:drawable/ic_menu_manage" />
    <item
        android:id="@+id/nav_profile"
        android:title="@string/menu_profile"
        android:icon="@android:drawable/ic_menu_info_details" />
    <item
        android:id="@+id/nav_usuarios"
        android:title="@string/usuarios_title"
        android:icon="@android:drawable/ic_menu_view" />
    <item
        android:id="@+id/nav_login"
        android:title="@string/menu_login"
        android:icon="@android:drawable/ic_menu_view" />
    <item
        android:id="@+id/nav_logout"
        android:title="@string/menu_logout"
        android:icon="@android:drawable/ic_menu_close_clear_cancel" />

</menu>